Fixed spacing of contact buttons

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -65,6 +65,10 @@ img {
     text-align: center;
 }
 
+.contact-link {
+    padding-left: 20px;
+}
+
 @media (max-width: 500px) {
     #projects {
         display: flex;
